--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="socail-icons">
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                     <a href=""><i class="fa-brands fa-square-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="https://www.instagram.com/slush._.box/"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="my-cv.pdf" download class="btn btn2">Download CV</a>
